--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,13 @@
 [package]
 name = "scrcpy-launcher"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full"] }
-reqwest = { version = "0.12", features = ["json"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-zip = "4.3"
-sha2 = "0.10"
-hex = "0.4"
 dirs = "6.0"
+ratatui = "0.29.0"
+crossterm = "0.29.0"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "wincon", "processthreadsapi", "tlhelp32", "handleapi", "synchapi", "winbase", "winnt", "winerror", "errhandlingapi", "minwindef"] }
