--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ tokio = { version = "1.0", features = ["full"] }
 dirs = "6.0"
 ratatui = "0.29.0"
 crossterm = "0.29.0"
+reqwest = { version = "0.12", features = ["json", "stream"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+semver = "1.0"
+tempfile = "3.8"
+futures-util = "0.3"
+zip = "0.6"
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "wincon", "processthreadsapi", "tlhelp32", "handleapi", "synchapi", "winbase", "winnt", "winerror", "errhandlingapi", "minwindef"] }
